# SURPASSING-THE-LEADER

./: .gitignore  AGENTS.md  Cargo.toml  README.md  exact_h3.npz  pyproject.toml  requirements.txt
andres-stl/: find_bright_stars.py  index.html
checkpoints/: README.md  ceiling_holdout_clean.npz
configs/: config.yaml
crates/: AGENTS.md  BUILD.md
demos/: README.md
docs/: ACTION_TIMING.md  CANONICAL_EXTENSIVE_FORM.md  DISTILLATION_AUDIT.md  FOUNDATIONS.md  README.md  REGEN2RL.md  SOLVER_EXTENSION_GOAL.md  phase_g_i1_validation.md
dth/: AGENTS.md  __init__.py  __main__.py  cfr.py  cli.py  generate_dataset.py  mcts.py  network.py  readiness.py  self_play.py  torch_cfr.py  train.py  widen_checkpoint.py
environment/: README.md  __init__.py  awareness.py  dth_env.py  legal_actions.py  observation.py  reward.py  route_math.py  route_stages.py  routing_features.py
hal/: HAL.md  README.md  __init__.py  action_model.py  agent.py  belief.py  buckets.py  evaluate.py  hal_opponent.py  memory.py  search.py  self_play.py  solver.py  train.py  types.py  value_net.py
legacy/: README.md
logs/: README.md
models/: README.md
papers/: AGENTS.md  CATALOG.md
pure/: generate_dataset.py  mcts.py  network.py  solver.py  train.py
scripts/: README.md  audit_alignment.py  audit_counterfactual.py  audit_opening.py  audit_trace_divergences.py  audit_utils.py  benchmark_mcts_convergence.py  check_trace_policy_probe.py  combine_checkpoint_ladder_reports.py  compare_checkpoints_exploitability.py  compare_checkpoints_ladder.py  compare_checkpoints_policy_drift.py  evaluate.py  (+58 more)
(+706 files in other folders)
