[project]
name = "stl-solver"
version = "0.1.0"
description = "Exact-second solver and AlphaZero-style training loop for Surpassing The Leader."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "gymnasium>=1.0,<2",
    "hydra-core>=1.3,<2",
    "numpy>=2.0,<3",
    "scipy>=1.14,<2",
    "torch>=2.5",
]

[dependency-groups]
dev = [
    "maturin>=1.14.1",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["stl/tests", "dth/tests", "toy/tests", "tests/meta"]
pythonpath = ["."]

[tool.uv]
package = false

[tool.uv.sources]
torch = { index = "pytorch-cu130" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
